--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
     --border-header: #ECECEC;
     --border-logo: rgba(175, 177, 184, 1);
     --icons-background: rgba(255, 255, 255, 0.1);
+    --animation-timing: cubic-bezier(0.4, 0, 0.2, 1);
 }
 html {
     box-sizing: border-box;
@@ -112,8 +113,30 @@ ul {
 /* навігація */
 
 
-.link {display: flex;
+.link {
+    display: flex;
+    position: relative;
+    /* padding-top: 6px; */
+    
 
+}
+
+.link::after {
+    position: absolute;
+    content: "";
+    display: block;
+    left: 0;
+    bottom: -33px;
+    width: 100%;
+    height: 4px;
+    background-color: var(--logo-color);
+    opacity: 0;
+    transition: opacity 250ms var(--animation-timing);
+    border-radius: 2px;
+    
+}
+.link:hover::after {
+    opacity: 1;
 }
 
 .site-nav .link {
