--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
     --border-logo: rgba(175, 177, 184, 1);
     --icons-background: rgba(255, 255, 255, 0.1);
     --animation-timing: cubic-bezier(0.4, 0, 0.2, 1);
+    --card-bottom-background: rgba(47, 48, 58, 0.8);
 }
 html {
     box-sizing: border-box;
@@ -466,6 +467,31 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .work .work-item:last-child {
     margin-right: 0;
+}
+.work-item {
+    position: relative;
+}
+.work-item::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0px;
+    background-color: var(--card-bottom-background);
+}
+
+.over-text {
+    position: absolute;
+    bottom: 34px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    color: var(--primary-white-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 /* Приклади роботи */
 
