--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
     --icons-background: rgba(255, 255, 255, 0.1);
     --animation-timing: cubic-bezier(0.4, 0, 0.2, 1);
     --card-bottom-background: rgba(47, 48, 58, 0.8);
+    --overlay-card-blue: rgba(33, 150, 243, 0.9);
 }
 html {
     box-sizing: border-box;
@@ -511,6 +512,50 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: var(--primary-gray-text);
 }
 
+.example-overlay::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 294px;
+    background-color: var(--overlay-card-blue);
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: 250ms var(--animation-timing);
+}
+
+.example-overlay:hover::before {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+
+
+.overlay-text {
+    content: "";
+    position: absolute;
+    width: 322px;
+    height: 168px;
+    top: 63px;
+    left: 24px;
+    font-weight: 400;
+    font-size: 18px;
+    color: var(--primary-white-color);
+    letter-spacing: 0.03em;
+    /* line-height: 1.56px; */
+    text-align: center;
+    
+    
+    
+    display: flex;
+}
+.example-overlay-text {
+    content: "";
+    opacity: 0;
+}
+
+.example-overlay-text:hover {
+    opacity: 1;
+}
 
 
 
@@ -884,7 +929,8 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    border: 1px solid var(--border-color)
+    position: relative;
+    overflow: hidden;
     
 }
 
