--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,8 @@ ul {
     list-style: none;
 }
 
+
+
 /* logo */
 
 .header {
@@ -352,8 +354,55 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 } 
 
 
+.backdrop {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
 
 
+.modal {
+    width: 528px;
+    height: 581px;
+    background-color: #FFFFFF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-close-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    padding: 0;
+    transition: 250ms;
+    margin-left: auto;
+    margin-top: 8px;
+    margin-right: 8px;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    fill: var(--logo-color);
+}
+
+.modal-close-btn:hover .close-btn,
+.modal-close-btn:focus .close-btn {
+    fill: var(--logo-color);
+}
 
 /* кнопки навігації*/
 
@@ -506,57 +555,38 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     
 }
 
-.example-text {
-    font-size: 16px;
-    line-height: 1.88;
-    color: var(--primary-gray-text);
-}
 
-.example-overlay::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 294px;
-    background-color: var(--overlay-card-blue);
-    opacity: 0;
-    transform: translateX(-100%);
-    transition: 250ms var(--animation-timing);
-    
+.example-overlay {
+    position: relative;
+    overflow: hidden;
 }
-
-.example-overlay:hover::before {
-    opacity: 1;
-    transform: translateX(0);
-}
-
 
 
 .overlay-text {
+    
     content: "";
     position: absolute;
+    height: 100%;
     width: 322px;
-    height: 168px;
-    top: 63px;
-    left: 24px;
-    font-weight: 400;
-    font-size: 18px;
+    top: 0;
+    left: 0;
+    padding: 63px 24px;
     color: var(--primary-white-color);
-    letter-spacing: 0.03em;
-    /* line-height: 1.56px; */
-    text-align: center;
-    
-    
-    
-    display: flex;
-}
-.example-overlay-text {
-    content: "";
-    opacity: 0;
+    background-color: var(--overlay-card-blue);
+    transform: translateY(100%);
+    transition: 250ms;
 }
 
-.example-overlay-text:hover {
-    opacity: 1;
+.example-link {
+    text-decoration: none;
+    
 }
+.example-link:hover .overlay-text,
+.example-link:focus .overlay-text {
+    transform: translateY(0%);
+
+}
+
 
 
 
@@ -930,8 +960,8 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    position: relative;
-    overflow: hidden;
+    
+    /* overflow: hidden; */
     
 }
 
@@ -953,6 +983,7 @@ padding-left: 24px;
 padding-right: 24px;
 padding-top: 20px;
 padding-bottom: 20px;
+
 
 }
 
