--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
     --animation-timing: cubic-bezier(0.4, 0, 0.2, 1);
     --card-bottom-background: rgba(47, 48, 58, 0.8);
     --overlay-card-blue: rgba(33, 150, 243, 0.9);
+    --cards-text-color:rgba(117, 117, 117, 1);
 }
 html {
     box-sizing: border-box;
@@ -387,6 +388,8 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: transparent;
     padding: 0;
     transition: 250ms;
     margin-left: auto;
@@ -552,7 +555,11 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     font-size: 18px;
     line-height: 2;
     margin-bottom: 4px;
-    
+    color: var(--primary-text-color);
+}
+
+.example-text {
+    color: var(--cards-text-color);
 }
 
 
@@ -575,6 +582,13 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--overlay-card-blue);
     transform: translateY(100%);
     transition: 250ms;
+}
+
+.example-overlay-text {
+    font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 1.56;
 }
 
 .example-link {
