--- a/css/styles.css
+++ b/css/styles.css
@@ -354,6 +354,8 @@ color: var(--primary-white-color);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 } 
 
+ 
+
 
 .backdrop {
     position: fixed;
@@ -379,6 +381,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: transform 250ms linear;
 }
 
 .modal-close-btn {
@@ -581,7 +584,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: var(--primary-white-color);
     background-color: var(--overlay-card-blue);
     transform: translateY(100%);
-    transition: 250ms;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .example-overlay-text {
