--- a/css/styles.css
+++ b/css/styles.css
@@ -365,6 +365,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    transition: opacity 500ms linear;
 }
 
 .is-hidden {
@@ -381,7 +382,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transition: transform 250ms linear;
+    
 }
 
 .modal-close-btn {
