--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ ul {
 
 }
 
-.link::after {
+.current::after {
     position: absolute;
     content: "";
     display: block;
@@ -158,6 +158,7 @@ ul {
 .site-nav .link:hover, 
 .site-nav .link:focus{
     color: var(--logo-color);
+    transition: 250ms var(--animation-timing);
 }
 
 
@@ -172,6 +173,7 @@ ul {
 
 .site-nav .link.current {
     color: var(--logo-color);
+    
 }
 
 
@@ -181,8 +183,10 @@ ul {
     display: flex;
     margin-left: 344px;
     padding-left: 0;
-    
-    
+}
+.auth-nav .link:hover,
+.auth-nav .link:focus {
+    transition: 250ms var(--animation-timing ); 
 }
 /* .icon-mail::before {
     display: inline-block;
@@ -329,6 +333,7 @@ ul {
 .secondary-button 
 {
     cursor: pointer;
+    transition: 250ms var(--animation-timing);
 }
 
 
@@ -354,7 +359,7 @@ color: var(--primary-white-color);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 } 
 
- 
+ /* Модалка */
 
 
 .backdrop {
@@ -374,16 +379,23 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 
+
+
 .modal {
     width: 528px;
-    height: 581px;
+    /* height: 581px; */
     background-color: #FFFFFF;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+    padding: 40px;
+    margin: 0 auto;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
 }
+
+
 
 .modal-close-btn {
     display: flex;
@@ -396,9 +408,9 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: transparent;
     padding: 0;
     transition: 250ms;
-    margin-left: auto;
-    margin-top: 8px;
-    margin-right: 8px;
+    
+    
+    
 }
 
 .modal-close-btn:hover,
@@ -409,6 +421,41 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 .modal-close-btn:hover .close-btn,
 .modal-close-btn:focus .close-btn {
     fill: var(--logo-color);
+}
+.modal-close-btn {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+}
+
+.contact-form-input{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    padding-left: 20px;
+
+}
+.contact-form-button{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    color: var(--primary-white-color);
+    background-color: var(--logo-color);
+    border-radius: 4px;
+    border-style: none;
+    padding: 10px 52px;
+}
+
+.contact-form-button:hover,
+.contact-form-button:focus {
+    background: #188CE8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+        
+}
+.form-button{
+    display: flex;
+    justify-content: center;
 }
 
 /* кнопки навігації*/
@@ -691,6 +738,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     height: 44px;
     background-color: var(--primary-white-color);
     border-radius: 50%;
+    transition: 250ms var(--animation-timing);
 }
 
 
@@ -761,11 +809,13 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     padding: 15px 32px;
     border: 1px solid var(--border-color);
     border-radius: 4px;
+    
  }
 
  .cards-link:hover,
  .cards-link:focus {
     border-color: #2196F3;
+    transition: 250ms var(--animation-timing);
  }
  .cards-list {
     list-style: none;
@@ -781,6 +831,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
  .client-logo {
     fill: var(--border-logo);
+    transition: 250ms var(--animation-timing);
  }
  .client-logo:hover ,
  .client-logo:focus {
@@ -872,6 +923,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     align-items: center;
     background-color: var(--icons-background);
     border-radius: 50%;
+    transition: 250ms var(--animation-timing);
 }
 .social-icon {
     fill: var(--primary-white-color);
