--- a/css/styles.css
+++ b/css/styles.css
@@ -438,12 +438,14 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 .contact-form-button{
     font-weight: 700;
     font-size: 16px;
+    font-family: inherit;
     line-height: 1.88;
     color: var(--primary-white-color);
     background-color: var(--logo-color);
     border-radius: 4px;
     border-style: none;
     padding: 10px 52px;
+
 }
 
 .contact-form-button:hover,
