--- a/css/styles.css
+++ b/css/styles.css
@@ -428,17 +428,41 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     top: 8px;
 }
 
+.contact-data {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+}
+
 .contact-form-input{
     width: 100%;
     height: 40px;
     margin-bottom: 20px;
     padding-left: 20px;
-
+    
 }
+
+.contact-form-message{
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    margin-bottom: 20px;
+    resize: none;
+}
+
+.contact-form-field{
+    margin-bottom: 30px;
+}
+
 .contact-form-button{
     font-weight: 700;
     font-size: 16px;
-    font-family: inherit;
+    font-family: inherit ;
     line-height: 1.88;
     color: var(--primary-white-color);
     background-color: var(--logo-color);
