--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,8 @@ ul {
 
 }
 
+ 
+
 .current::after {
     position: absolute;
     content: "";
@@ -135,13 +137,16 @@ ul {
     width: 100%;
     height: 4px;
     background-color: var(--logo-color);
-    opacity: 0;
+    opacity: 1;
     transition: opacity 250ms var(--animation-timing);
     border-radius: 2px;
     
 }
 .link:hover::after {
     opacity: 1;
+}
+.current {
+    color: red;
 }
 
 .site-nav .link {
@@ -171,7 +176,7 @@ ul {
 
   
 
-.site-nav .link.current {
+.site-nav .link .current {
     color: var(--logo-color);
     
 }
@@ -643,6 +648,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 .example-overlay {
     position: relative;
     overflow: hidden;
+    height: 294px;
 }
 
 
@@ -776,6 +782,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 .social-list-link:hover .icon-team,
 .social-list-link:focus .icon-team {
     fill: var(--primary-white-color);
+    transition: 250ms var(--animation-timing);
 }
 
 
@@ -842,6 +849,11 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  .cards-link:focus {
     border-color: #2196F3;
     transition: 250ms var(--animation-timing);
+ }
+
+ .cards-link:hover .client-logo,
+ .cards-link:focus .client-logo {
+    fill: var(--logo-color);
  }
  .cards-list {
     list-style: none;
