--- a/css/styles.css
+++ b/css/styles.css
@@ -523,7 +523,7 @@ color: var(--primary-gray-text);
 }
 
 .contact-form-field{
-    margin-bottom: 30px;
+    position: absolute;
 }
 
 .contact-form-button{
@@ -544,11 +544,42 @@ color: var(--primary-gray-text);
     background: #188CE8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
-        
 }
+
+.modal-form-check {
+    border: 1px solid var(--modal-icon-color);
+    border-radius: 2px;
+    cursor: pointer;
+    padding: 1px;
+    margin-right: 9px;
+}
+
+.modal-form-check-icon{
+    display: none;
+}
+.contact-form-field:checked + .modal-form-check {
+    background-color: var(--logo-color);
+    border-color: var(--logo-color);
+} 
+
+.contact-form-field:focus + .modal-form-check{
+    box-shadow: 0 0 0 2px var(--logo-color);
+} 
+
+.contact-form-field:checked + .modal-form-check .modal-form-check-icon {
+    display: block;
+    fill: var(--primary-white-color);
+}
+
 .form-button{
     display: flex;
     justify-content: center;
+}
+
+.contact-form-field-wrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 /* кнопки навігації*/
